--- a/views/weather.html
+++ b/views/weather.html
@@ -8,7 +8,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     
-    <link rel='stylesheet', href='./weather.css'>
+    <link rel='stylesheet', href='weather.css'>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato&display=swap" rel="stylesheet">
     <script
     src="https://code.jquery.com/jquery-3.5.1.js"
@@ -47,4 +47,8 @@
 
 </body>
 
-<script type="text/javascript" src="./weather.js"></script>
+<script type="text/javascript" src="api.js"></script>
+<script type="text/javascript" src="weather.js"></script>
+
+</html>
+
