update to get geolocation of users

--- a/views/weather.html
+++ b/views/weather.html
@@ -3,20 +3,22 @@
 <html lang="en">
   
 <head>
+    
     <meta charset="utf-8" />
-    
-    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
     
-    <link rel='stylesheet', href='weather.css'>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato&display=swap" rel="stylesheet">
+    <!--
     <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>-->
+    
+    <link rel='stylesheet', href='weather.css'>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site"
     />
     
     <title>Weather Us</title>
@@ -43,11 +45,9 @@
         </div>
     </section>
 
-    <button id="getWeather" onclick="getWeather()">Get Current Weather!</button>
-
 </body>
 
-<script type="text/javascript" src="api.js"></script>
+
 <script type="text/javascript" src="weather.js"></script>
 
 </html>
