--- a/views/weather.html
+++ b/views/weather.html
@@ -29,7 +29,7 @@
 
     <section class="top-banner">
         <div class="container">
-            <h1 class="heading">Simple Weather App</h1>
+            <h1 class="heading">Weather US</h1>
             <form id="top-banner-form">
                 <input type="text" placeholder="Search for a city" autofocus>
                 <button type="submit">SUBMIT</button>
