--- a/views/weather.html
+++ b/views/weather.html
@@ -45,6 +45,12 @@
         </div>
     </section>
 
+    <section class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>text</p>
+        </div>
+    </section>
 </body>
 
 
