--- a/views/weather.html
+++ b/views/weather.html
@@ -48,7 +48,9 @@
     <section class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
-            <p>text</p>
+            <ul class="daily">
+
+            </ul>
         </div>
     </section>
 </body>
