--- a/views/weather.html
+++ b/views/weather.html
@@ -21,7 +21,7 @@
       content="Web site"
     />
     
-    <title>Weather Us</title>
+    <title>Weather City</title>
   </head>
   
 
@@ -29,7 +29,8 @@
 
     <section class="top-banner">
         <div class="container">
-            <h1 class="heading">Weather US</h1>
+            <h1 class="heading">Weather City</h1>
+            <h1 class="sub-heading">Today is<span class="date"></span></h1>
             <form id="top-banner-form">
                 <input type="text" placeholder="Search for a city" autofocus>
                 <button type="submit">SUBMIT</button>
