--- a/views/weather.html
+++ b/views/weather.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
-    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato&display=swap" rel="stylesheet">
     <!--
     <script
@@ -29,8 +29,8 @@
 
     <section class="top-banner">
         <div class="container">
-            <h1 class="heading">Weather City</h1>
-            <h1 class="sub-heading">Today is<span class="date"></span></h1>
+            <h1 class="heading">WEATHER CITY</h1>
+            <h1 class="sub-heading"><span class="date"></span></h1>
             <form id="top-banner-form">
                 <input type="text" placeholder="Search for a city" autofocus>
                 <button type="submit">SUBMIT</button>
@@ -48,7 +48,6 @@
 
     <section class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
             <ul class="daily">
 
             </ul>
