--- a/views/weather.html
+++ b/views/weather.html
@@ -31,8 +31,10 @@
         <div class="container">
             <h1 class="heading">WEATHER CITY</h1>
             <h1 class="sub-heading"><span class="date"></span></h1>
-            <form id="top-banner-form">
-                <input type="text" placeholder="Search for a city" autofocus>
+            <form id="top-banner-form" autocomplete="off">
+                <div class="autocomplete">
+                <input id="myInput" type="text" placeholder="Search for a city" autofocus>
+                </div>
                 <button type="submit">SUBMIT</button>
                 <span class="msg"></span>
             </form>
@@ -57,6 +59,6 @@
 
 
 <script type="text/javascript" src="weather.js"></script>
-
+<script>autocomplete(document.getElementById("myInput"), countries)</script>
 </html>
 
