--- a/views/weather.html
+++ b/views/weather.html
@@ -35,7 +35,7 @@
                 <div class="autocomplete">
                 <input id="myInput" type="text" placeholder="Search for a city" autofocus>
                 </div>
-                <button type="submit">SUBMIT</button>
+                <button type="submit">SUBMIT</button><br>
                 <span class="msg"></span>
             </form>
         </div>
