fix submit button and city list

--- a/views/weather.pug
+++ b/views/weather.pug
@@ -2,6 +2,14 @@ html
   
 head
 
-  body
   
+  
+
+  body
+
+    input.api_key(value = api_key style='display:none')
+    input.coun_list(value = list style='display:none')
     include weather.html
+
+    
+    
