--- a/views/weather.html
+++ b/views/weather.html
@@ -6,14 +6,8 @@
     
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script type="text/javascript" src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lato&display=swap" rel="stylesheet">
-    <!--
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.js"
-    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>-->
     
     <link rel='stylesheet', href='weather.css'>
     <meta
@@ -31,11 +25,11 @@
         <div class="container">
             <h1 class="heading">WEATHER CITY</h1>
             <h1 class="sub-heading"><span class="date"></span></h1>
-            <form id="top-banner-form" autocomplete="off">
+            <form id="top-banner-form" autocomplete="off" onsubmit="return false">
                 <div class="autocomplete">
                 <input id="myInput" type="text" placeholder="Search for a city" autofocus>
                 </div>
-                <button type="submit">SUBMIT</button><br>
+                <button id="submitbtn" type="submit">SUBMIT</button><br>
                 <span class="msg"></span>
             </form>
         </div>
@@ -51,14 +45,13 @@
     <section class="modal">
         <div class="modal-content">
             <ul class="daily">
-
             </ul>
         </div>
     </section>
+
 </body>
 
-
 <script type="text/javascript" src="weather.js"></script>
-<script>autocomplete(document.getElementById("myInput"), countries)</script>
+
 </html>
 
